<resources>


    <string name="app_name" translatable="false">TicketOrder</string>
    <string name="selectTime">去程時間</string>
    <string name="btn_sendSearch">查詢</string>
    <string name="startTime">出發時間</string>

    <string name="endTime">抵達時間</string>

    <string name="carNum">車號</string>

    <string name="needTime">經過時間</string>
    <string-array name="station">
        <item>南港</item>
        <item>台北</item>
        <item>板橋</item>
        <item>桃園</item>
        <item>新竹</item>
        <item>苗栗</item>
        <item>台中</item>
        <item>彰化</item>
        <item>雲林</item>
        <item>嘉義</item>
        <item>台南</item>
        <item>左營</item>
    </string-array>

    <string name="phone">0921916465</string>
    <string name="carType">車廂種類</string>
    <string name="seatNum">有幾張票</string>
    <string name="totalCost">總票價</string>
    <string name="startStation">起始站</string>
    <string name="endStation">終點站</string>
    <string name="discountText">優惠資訊</string>

    <string name="title_activity_date_set">DateSet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_toMain">回到首頁</string>
    <string name="title_activity_search_ticket">searchTicket</string>
    <string name="title_activity_search_car">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">身分證字號</string>
    <string name="prompt_password">密碼




    </string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>