<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="24dp"
    android:paddingTop="15dp"
    android:paddingRight="24dp"
    android:paddingBottom="5dp">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_available_btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlinear"/>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/startTime"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/endTime"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <TextView
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="->"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/endTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startTime"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/carNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/carNum"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/needTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/needTime"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/seatId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="座位"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintStart_toEndOf="@+id/carNum"
        app:layout_constraintTop_toTopOf="@+id/carNum"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/startStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/startStation"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <TextView
        android:id="@+id/endStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/endStation"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <TextView
        android:id="@+id/discountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="#FF9800"
        android:text="@string/discountText"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <LinearLayout
        android:id="@+id/textlinear"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="乘車日期"
            android:paddingLeft="20dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>